; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_nl_cmd_region_read_chunk_fill.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_nl_cmd_region_read_chunk_fill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.devlink = type { i32 }
%struct.nlattr = type { i32 }

@DEVLINK_ATTR_REGION_CHUNK = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@DEVLINK_ATTR_REGION_CHUNK_DATA = common dso_local global i32 0, align 4
@DEVLINK_ATTR_REGION_CHUNK_ADDR = common dso_local global i32 0, align 4
@DEVLINK_ATTR_PAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.devlink*, i32*, i32, i32)* @devlink_nl_cmd_region_read_chunk_fill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devlink_nl_cmd_region_read_chunk_fill(%struct.sk_buff* %0, %struct.devlink* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.sk_buff*, align 8
  %8 = alloca %struct.devlink*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.nlattr*, align 8
  %13 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %7, align 8
  store %struct.devlink* %1, %struct.devlink** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %15 = load i32, i32* @DEVLINK_ATTR_REGION_CHUNK, align 4
  %16 = call %struct.nlattr* @nla_nest_start_noflag(%struct.sk_buff* %14, i32 %15)
  store %struct.nlattr* %16, %struct.nlattr** %12, align 8
  %17 = load %struct.nlattr*, %struct.nlattr** %12, align 8
  %18 = icmp ne %struct.nlattr* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %5
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %6, align 4
  br label %49

22:                                               ; preds = %5
  %23 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %24 = load i32, i32* @DEVLINK_ATTR_REGION_CHUNK_DATA, align 4
  %25 = load i32, i32* %10, align 4
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @nla_put(%struct.sk_buff* %23, i32 %24, i32 %25, i32* %26)
  store i32 %27, i32* %13, align 4
  %28 = load i32, i32* %13, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %22
  br label %44

31:                                               ; preds = %22
  %32 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %33 = load i32, i32* @DEVLINK_ATTR_REGION_CHUNK_ADDR, align 4
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* @DEVLINK_ATTR_PAD, align 4
  %36 = call i32 @nla_put_u64_64bit(%struct.sk_buff* %32, i32 %33, i32 %34, i32 %35)
  store i32 %36, i32* %13, align 4
  %37 = load i32, i32* %13, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %31
  br label %44

40:                                               ; preds = %31
  %41 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %42 = load %struct.nlattr*, %struct.nlattr** %12, align 8
  %43 = call i32 @nla_nest_end(%struct.sk_buff* %41, %struct.nlattr* %42)
  store i32 0, i32* %6, align 4
  br label %49

44:                                               ; preds = %39, %30
  %45 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %46 = load %struct.nlattr*, %struct.nlattr** %12, align 8
  %47 = call i32 @nla_nest_cancel(%struct.sk_buff* %45, %struct.nlattr* %46)
  %48 = load i32, i32* %13, align 4
  store i32 %48, i32* %6, align 4
  br label %49

49:                                               ; preds = %44, %40, %19
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local %struct.nlattr* @nla_nest_start_noflag(%struct.sk_buff*, i32) #1

declare dso_local i32 @nla_put(%struct.sk_buff*, i32, i32, i32*) #1

declare dso_local i32 @nla_put_u64_64bit(%struct.sk_buff*, i32, i32, i32) #1

declare dso_local i32 @nla_nest_end(%struct.sk_buff*, %struct.nlattr*) #1

declare dso_local i32 @nla_nest_cancel(%struct.sk_buff*, %struct.nlattr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
